--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.6.8
+      - image: circleci/postgres:11.5
 
     working_directory: ~/rate-my-waseda-api
 
