--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,12 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.6.8
+        environment:
+          DATABASE_URL: postgresql://postgres@localhost/db?sslmode=disable
       - image: circleci/postgres:11.5
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: db
 
     working_directory: ~/rate-my-waseda-api
 
