Update Dockerfile and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile.test
-    command: python manage.py test
+      dockerfile: Dockerfile
+    command: python manage.py runserver 0.0.0.0:8000
     environment:
       ENVIRONMENT: 'development'
     volumes:
