--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,4 +1,5 @@
 option_settings:
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: course_rater.settings
   aws:elasticbeanstalk:container:python:
     WSGIPath: course_rater/wsgi.py
-
